positioned the items in section three

--- a/index.html
+++ b/index.html
@@ -65,11 +65,17 @@
     </div>
 
       <!-- Fourth Section starts here -->
-    <div class="fourth-section">  
-      <div class="call-to-action"><h5>Call to action! it is time</h5></div>
-      <div>Sign up for our product by clicking the button over there!</h6></div>
-      <button class="second-button">Sign Up</button>
-    </div>  
+    <div class="fourth-section">
+      <div class="background">
+        <div class="words">      
+        <div> 
+          <h4 class="call">Call to action! it is time</h4>
+          <h5>Sign up for our product by clicking the button over there!</h5>
+        </div> 
+        </div>      
+          <button class="right-button" >Sign Up</button>
+      </div>     
+    </div>      
 
       <!-- Footer -->
       <div class="footer">
