--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <h4 class="small-heading">Put the description of your Website here example: Lorem ipsum dolor sit amet consectetur architecto accusamus sit blanditiis omnis laborum provident sint? Expedita?</h4> 
     <button class="first-button">Sign Up</button>
   </div>
-  <div><img src="goooo" alt="Place Image here">
+  <div><img src="images/code.jpg" alt="symbol of code">
+    <!-- Photo by <a href="https://unsplash.com/@jacksonsophat?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jackson So</a> on <a href="https://unsplash.com/s/photos/web-design?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+   -->
   </div>
   </div>
 </div>
@@ -57,10 +59,10 @@
       <!-- Third Section i.e quote starts here -->
     <div class="third-section">      
       <figure>
-        <blockquote class="quote">
-            <p><em>ipsum dolor sit amet consectetur, adipisicing elit. Omnis, porro voluptates? Iste sit magnam ea odio dignissimos repellendus, veritatis dolore accusantium illum, eveniet imped</em></p>
+        <blockquote>
+           <p><em>ipsum dolor sit amet consectetur, adipisicing elit. Omnis, porro voluptates? Iste sit magnam ea odio dignissimos repellendus, veritatis dolore accusantium illum, eveniet imped</em></p>
         </blockquote>
-        <figcaption class="cite">totam beatae, <cite>hlaidala velit</cite></figcaption>
+        <figcaption class="cite">totam beatae</figcaption>
       </figure>
     </div>
 
@@ -68,10 +70,8 @@
     <div class="fourth-section">
       <div class="background">
         <div class="words">      
-        <div> 
           <h4 class="call">Call to action! it is time</h4>
           <h5>Sign up for our product by clicking the button over there!</h5>
-        </div> 
         </div>      
           <button class="right-button" >Sign Up</button>
       </div>     
