I changed the odin-project to my name

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <!-- Footer -->
       <div class="footer">
-      <h5>Copyright &#169; Odin Project 2022</h5> 
+      <h5>Copyright &#169; Ezea Stephen' Project 2022</h5> 
       </div>   
   </body>
 </html>
